--- a/Gemini/Podfile
+++ b/Gemini/Podfile
@@ -6,10 +6,10 @@ target 'Gemini' do
   use_frameworks!
 
   # Pods for Gemini
+  pod "SwiftChart"
   pod 'Alamofire', '~> 4.7'
   pod 'RxSwift',    '~> 4.0'
   pod 'RxCocoa',    '~> 4.0'
-
 
   target 'GeminiTests' do
     inherit! :search_paths
